@@ -367,10 +367,8 @@ public:
 				Rf_setAttrib( y, R_NamesSymbol, x ) ;
 			} else {
 				/* use the slower and more flexible version (callback to R) */
-			
-				SEXP new_vec = PROTECT( internal::try_catch( 
-				    Rf_lang3( Rf_install("names<-"), parent, x )
-				)) ;
+			        SEXP namesSym = Rf_install( "names<-" );
+				SEXP new_vec = PROTECT( internal::try_catch(Rf_lang3( namesSym, parent, x ))) ;
 				/* names<- makes a new vector, so we have to change 
 				   the SEXP of the parent of this proxy */
 				const_cast<Vector&>(parent).set_sexp( new_vec ) ;
